release/0.0.9/docs/TGH.md
---
Module Name: TGH
Module Guid: cbfaeb46-020e-49b9-9c4c-5d9c0b90a995
Download Help Link: https://www.github.com/Kaimodo/TGH/release/TGH/docs/TGH.md
Help Version: 0.0.9
Locale: en-US
---

# TGH Module
## Description
Module for Private Server use

## TGH Cmdlets
### [Convert-PS2Bat](Convert-PS2Bat.md)
Converts PowerShell scripts to batch files

### [Convert-txt2wav](Convert-txt2wav.md)
Converts text to a .WAV audio file

### [Get-ADComputerByUser](Get-ADComputerByUser.md)
Get's the AD-Computer the specific user was Last Logged on

### [Get-Decryption](Get-Decryption.md)
Decrypt a given Pharse from a given File

### [Get-GitSheet](Get-GitSheet.md)
Show basic Git Commands

### [Get-HelpMessage](Get-HelpMessage.md)
Function to explain why an error occurred and provides problem-solving information.
Equivalent of NET HELPMSG

### [Get-PubIP](Get-PubIP.md)
Small little Helper for Public IP

### [Get-WindowsProductKey](Get-WindowsProductKey.md)
Get the Windows product key and some usefull informations about the system

### [New-SS](New-SS.md)
Take a Screenshot and save it to BMP

### [Search-Google](Search-Google.md)
Google Suche verwenden

### [Set-Encryption](Set-Encryption.md)
Encrypt a given Pharse into a given File


